
7.21  2017-01-19

7.20  2017-01-18
  - Fixed a bug in Mojo::File where the make_path method would die even if no
    error occurred.
  - Fixed warnings in Mojo::IOLoop::TLS.

7.19  2017-01-14
  - Added module Mojo::IOLoop::TLS.
  - Added can_nnr and can_socks methods to Mojo::IOLoop::Client.

7.18  2017-01-11
  - Fixed support for relative %INC paths in Mojo::Home.
  - Fixed a bug in Mojo::URL where invalid fragment strings could be generated.

7.17  2017-01-11
  - Fixed Windows bugs in Mojo::File. (kmx)

7.16  2017-01-10
  - Fixed Windows bugs in Mojo::File. (kmx)

7.15  2017-01-09
  - Deprecated Mojo::ByteStream::slurp and Mojo::Util::slurp in favor of
    Mojo::File::slurp.
  - Deprecated Mojo::ByteStream::spurt and Mojo::Util::spurt in favor of
    Mojo::File::spurt.
  - Deprecated Mojo::Util::files in favor of Mojo::File::list_tree.
  - Deprecated Mojo::Home::lib_dir, Mojo::Home::parse, Mojo::Home::parts in
    favor of new features inherited from the Mojo::File base class.
  - Added module Mojo::File.
  - Improved Mojo::Home to be a subclass of Mojo::File.
  - Improved mojo_lib_dir and rel_file methods in Mojo::Home to return
    Mojo::Home objects.
  - Improved rel_file methods in Mojolicious::Command to return Mojo::File
    objects.
  - Improved every_param and param methods in Mojolicious::Validator::Validation
    to use the current topic.

7.14  2017-01-04
  - Deprecated Mojo::Home::list_files in favor of Mojo::Util::files.
  - Deprecated Mojo::Home::rel_dir in favor of Mojo::Home::rel_file.
  - Deprecated Mojolicious::Command::rel_dir in favor of
    Mojolicious::Command::rel_file.
  - Fixed a bug in Mojo::IOLoop::Subprocess where the pipe used for IPC could
    disappear because of a timeout.

7.13  2016-12-23
  - Deprecated Mojo::Message::Response::is_status_class in favor of new is_*
    methods.
  - Added result method to Mojo::Transaction.
  - Added is_client_error, is_error, is_info, is_redirect, is_server_error and